Revert API changes
